--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,1 +1,48 @@
-<h1>Settings</h1>
+<div class="row">
+  <h1>Update your settings</h1>
+  <form name="form">
+    <fieldset>
+      <legend>Update settings</legend>
+
+      <div class="row">
+        <div class="small-8 columns">
+          <label>Name</label>
+          <input type="text" placeholder="Name" name="name" ng-model="settings.name" ng-minlength=3 ng-maxlength=20 ng-pattern="/^[a-zA-Z]+$/" required />
+          <div ng-show="form.name.$dirty && form.name.$invalid">
+            <div ng-show="form.name.$error.required">Your name is required.</div>
+            <div ng-show="form.name.$error.minlength">Your name must be greater than 3 characters.</div>
+            <div ng-show="form.name.$error.maxlength">Your name cannot be greater than 20 characters.</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="small-8 columns">
+          <label>Email</label>
+          <input type="email" placeholder="Email" name="email" ng-model="settings.email" />
+          <div ng-show="form.email.$dirty && form.email.$invalid">
+            <span ng-show="form.email.$error.email">That is not a valid email</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="small-8 columns">
+          <label>Age</label>
+          <input type="number" placeholder="Age" name="age" ng-model="settings.age" min=3 max=199 />
+          <div ng=show="form.age.$dirty && form.age.$invalid">
+            <span ng-show="form.age.$error.min">You must be at least 3 to use this site</span>
+            <span ng-show="form.age.$error.max">Show me your birth certificate</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="push-9 small-3">
+          <button type="submit" class="button">Update</button>
+        </div>
+      </div>
+
+    </fieldset>
+  </form>
+</div>
