--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,8 @@
 <div class="small-4 columns" ng-controller="MailListingController">
   <h2>Sidebar</h2>
   <ul id="emailListing">
-    <li ng-repeat="mail in email">
-      <div class="container emailListing">
+    <li ng-repeat="mail in email" ng-click="setSelectedMail(mail)">
+      <div class="container emailListing" ng-class="{selected: isSelected(mail)}">
         <div class="small-8 columns">{{ mail.from }}</div>
         <div class="small-12 columns">{{ mail.subject }}</div>
       </div>
@@ -12,4 +12,5 @@
 
 <div class="small-8 columns" ng-controller="ContentController">
   <h2>Content</h2>
+  {{ selectedMail }}
 </div>
