--- a/templates/home.html
+++ b/templates/home.html
@@ -11,6 +11,24 @@
 </div>
 
 <div class="small-8 columns" ng-controller="ContentController">
-  <h2>Content</h2>
-  {{ selectedMail }}
+  <div ng-show="!selectedMail">
+    <h1>No conversation selected</h1>
+  </div>
+
+  <div ng-show="selectedMail">
+    <div class="row header">
+      <div class="small-6 columns">{{ selectedMail.subject }}</div>
+      <div class="small-6 columns">{{ selectedMail.sent_at }}</div>
+    </div>
+
+    <div class="row actions">
+      <div class="small-8 columns">{{ selectedMail.from }} to {{ selectedMail.to }}</div>
+
+      <a ng-click="showReply()" class="button radio push-1">Reply</a>
+    </div>
+
+    <div class="small-12 columns">
+      {{ selectedMail.body }}
+    </div>
+  </div>
 </div>
